Unify createMeta from OsdServlet and FolderServlet into MetaService
close #294